# raspi_flir_lepton

./: .env  .gitignore  app.spec  apt_requirement.txt  pyuic.json  requirement.txt  requirements-dev.txt  requirements.txt  setup.py  swttFY.json
app/: __main__.py
app/ui/: AuthWidget_ui.py  HomeWidget_ui.py  MainWindow_ui.py  TableWidget_ui.py  resources_rc.py
app/views/: AuthWidget.py  HomeWidget.py  MainWindow.py  TableWidget.py
lepton/: lepton.py  lepton_color.py  lepton_decoder.py  lepton_i2c.py  lepton_spi.py  lepton_spi_test.py  lepton_thread.py
lepton/sdk/: LEPTON_AGC.h  LEPTON_SYS.h  LEPTON_VID.h
lepton/wrapper/: CMakeLists.txt  LEPTON_AGC_Wrapper.cpp  LEPTON_ErrorCodes_Wrapper.cpp  LEPTON_I2C_Protocol_Wrapper.cpp  LEPTON_I2C_Reg_Wrapper.cpp  LEPTON_I2C_Service_Wrapper.cpp  LEPTON_Macros_Wrapper.cpp  LEPTON_OEM_Wrapper.cpp  LEPTON_RAD_Wrapper.cpp  LEPTON_SDKConfig_Wrapper.cpp  LEPTON_SDK_Wrapper.cpp  LEPTON_SYS_Wrapper.cpp  LEPTON_Types_Wrapper.cpp  LEPTON_VID_Wrapper.cpp  crc16fast_Wrapper.cpp  raspi_I2C_Wrapper.cpp  tes.ipynb
resources/: resources.qrc  style.qss
resources/ui/: AuthWidget.ui  HomeWidget.ui  MainWindow.ui  TableWidget.ui
utils/: colormaps.py  log_util.py
